// gRPC for the faceit api

syntax = "proto3";

option go_package = ".;faceit";

package faceit;

service Faceit {
    rpc GetProfileByID (ProfileRequest) returns (ProfileReply) {}
    rpc GetProfileByName (ProfileNameRequest) returns (ProfileReply) {}
    rpc GetInvite (InviteRequest) returns (InviteReply) {}
    rpc Ban (BanRequest) returns (Empty) {}
    rpc Unban (UnbanRequest) returns (Empty) {}
    rpc GetUserHubs(ProfileRequest) returns (stream Hub) {}
}

// Profile
message ProfileRequest {
    string guid = 1;
}

message ProfileNameRequest {
    string name = 1;
}

message ProfileReply {
    string guid = 1;
    int32 skilllvl = 2;
    string username = 3;
}

// Invite
message InviteRequest {
    string hubid = 1;
}

message InviteReply {
    string base = 1;
    string code = 2;
}

// Ban
message BanRequest {
    string hubid = 1;
    string guid = 2;
    string reason = 3;
}

message UnbanRequest {
    string hubid = 1;
    string guid = 2;
}

message Hub {
    string hubid  = 1;
    string name   = 2;
    string gameid = 3;
}

// Helper
message Empty {}
